incorporacion de mocha, chai y puppeteer al proyecto con el objetivo de realizar las pruebas

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "app.mjs",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test1": "echo \"Error: no test specified\" && exit 1",
+    "test": ".\\node_modules\\.bin\\mocha .\\test\\**\\*.spec.mjs --reporter spec --timeout 999999",
     "start": "node ."
   },
   "keywords": [],
@@ -15,5 +16,10 @@
     "express": "^4.21.1",
     "git": "^0.1.5",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "chai": "^5.1.2",
+    "mocha": "^10.8.2",
+    "puppeteer": "^23.7.0"
   }
 }
