--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "app.mjs",
   "type": "module",
   "scripts": {
-    "test1": "echo \"Error: no test specified\" && exit 1",
-    "test": ".\\node_modules\\.bin\\mocha .\\test\\**\\*.spec.mjs --reporter spec --timeout 999999",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-model": ".\\node_modules\\.bin\\mocha .\\test\\**\\model.spec.mjs --reporter spec --timeout 999999",
+    "test-rest": ".\\node_modules\\.bin\\mocha .\\test\\**\\rest.rest.mjs --reporter spec --timeout 999999",
     "start": "node ."
   },
   "keywords": [],
