--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "test-model": ".\\node_modules\\.bin\\mocha .\\test\\**\\model.spec.mjs --reporter spec --timeout 999999",
-    "test-rest": ".\\node_modules\\.bin\\mocha .\\test\\**\\rest.rest.mjs --reporter spec --timeout 999999",
+    "test-rest": ".\\node_modules\\.bin\\mocha .\\test\\**\\rest.spec.mjs --reporter spec --timeout 999999",
     "start": "node ."
   },
   "keywords": [],
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "chai-http": "^5.1.1",
     "express": "^4.21.1",
     "git": "^0.1.5",
     "path": "^0.12.7"
